--- a/ML-WORKSPACE/2nd_edd_mini_marge_lgtm.ipynb
+++ b/ML-WORKSPACE/2nd_edd_mini_marge_lgtm.ipynb
@@ -13,7 +13,7 @@
     "import matplotlib\n",
     "import seaborn as sns\n",
     "\n",
-    "df = pd.read_csv('data_nike_vs_addidas_unsupervised.csv')\n",
+    "df = pd.read_csv('./data/data_nike_vs_addidas_unsupervised.csv')\n",
     "df\n",
     "\n",
     "# mac 폰트 추가\n",
