--- a/ML-WORKSPACE/07_clustering/01_kmeans.ipynb
+++ b/ML-WORKSPACE/07_clustering/01_kmeans.ipynb
@@ -1034,7 +1034,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pystudy_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1048,7 +1048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
